# floating-point-modular-multiplication

./: .editorconfig  CMakeLists.txt  README.md  bench_repeated_multiplications.cpp  common.h  intrinsics.hpp  modmul.hpp  modulus.hpp  rounding_mode.hpp  vector_register.hpp
.devcontainer/development-aarch64/: Dockerfile
.devcontainer/development-aarch64-cross/: Dockerfile  devcontainer.json
.devcontainer/development-x86-64/: Dockerfile
.github/workflows/: format.yml  (+1 more)
data/: README.md  repeated_multiplications-fx1000-clang++-20240730-1.json  repeated_multiplications-fx1000-clang++-20240730-2.json  repeated_multiplications-fx1000-clang++-20240730-3.json  repeated_multiplications-fx1000-clang++-20240730-4.json  repeated_multiplications-fx1000-clang++-20240730-5.json  repeated_multiplications-r7a-clang++-20240730-1.json  repeated_multiplications-r7a-clang++-20240730-2.json  repeated_multiplications-r7a-clang++-20240730-3.json  repeated_multiplications-r7a-clang++-20240730-4.json  repeated_multiplications-r7a-clang++-20240730-5.json  repeated_multiplications-r7i-clang++-20240730-1.json  repeated_multiplications-r7i-clang++-20240730-2.json  repeated_multiplications-r7i-clang++-20240730-3.json  repeated_multiplications-r7i-clang++-20240730-4.json  repeated_multiplications-r7i-clang++-20240730-5.json  repeated_multiplications-r8g-clang++-20240730-1.json  repeated_multiplications-r8g-clang++-20240730-2.json  repeated_multiplications-r8g-clang++-20240730-3.json  repeated_multiplications-r8g-clang++-20240730-4.json  repeated_multiplications-r8g-clang++-20240730-5.json
